--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
-- Font sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weights:
-Default: 400
-Medium: 500 
-Semi-bold: 600 
-Bold: 700
-
-- Line heights:
-Default: 1
-Small: 1.05
-P default: 1.6
-
--- 02 COLORS
-
-- Primary: #e67e22
-- Tints: #fdf2e9;
-- Shades: #cf711f
-- Accents:
-- Greys: #555 #333
-
---- 05 ShADOWS
-
---- 06 BORDER-RADIUS
-Default: 9px
-
---- 07 WHITESPACE
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
 * {
   margin: 0;
   padding: 0;
@@ -99,8 +64,8 @@ body {
 .heading-secondary,
 .heading-tertiary {
   font-weight: 700;
-  /* color: #45260a; */
-  color: #333;
+  color: #45260a;
+  /* color: #333; */
   letter-spacing: -0.5px;
 }
 
@@ -114,6 +79,10 @@ body {
   font-size: 4.4rem;
   line-height: 1.2;
   margin-bottom: 9.6rem;
+}
+
+.heading-secondary span {
+  color: #cf711f;
 }
 
 .heading-tertiary {
@@ -182,7 +151,7 @@ body {
 
 .btn--form:hover {
   background-color: #fff;
-  color: #555;
+  color: #45260a;
 }
 
 .link:link,
@@ -205,21 +174,12 @@ body {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
-}
-
-.list-item {
   font-size: 1.8rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 1.6rem;
   line-height: 1.2;
-}
-
-.list-icon {
-  width: 3rem;
-  height: 3rem;
-  color: #e67e22;
+  border-radius: 50px;
 }
 
 *:focus {
@@ -273,13 +233,19 @@ strong {
   display: flex;
   align-items: center;
   gap: 4.8rem;
+  /* gap: 1.8rem; */
+  font-size: 1.7rem;
+  font-weight: 700;
+  background: #fae5d3;
+  border-radius: 50px;
+  padding: 1rem 2rem;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
   display: inline-block;
   text-decoration: none;
-  color: #333;
+  color: #45260a;
   font-weight: 500;
   font-size: 1.8rem;
   transition: all 0.3s;
@@ -287,7 +253,7 @@ strong {
 
 .main-nav-link:hover,
 .main-nav-link:active {
-  color: #cf711f;
+  color: #e67e22;
 }
 
 .main-nav-link.nav-cta:link,
@@ -542,7 +508,7 @@ strong {
 
 .meal-title {
   font-size: 2.4rem;
-  color: #333;
+  color: #45260a;
   font-weight: 600;
   margin-bottom: 3.2rem;
 }
@@ -574,6 +540,51 @@ strong {
 .all-recipes {
   text-align: center;
   font-size: 1.8rem;
+}
+
+.list li {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #333;
+  font-weight: 600;
+  border-radius: 100px;
+  padding: 0.4rem 0.8rem;
+}
+
+.vegetarian {
+  background: #51cf66;
+}
+
+.vegan {
+  background: #94d82d;
+}
+
+.pescatarian {
+  background: #c2e1e8;
+}
+
+.gluten-free {
+  background: #d7beff;
+}
+
+.lactose-free {
+  background: #e8c2d4;
+}
+
+.keto {
+  background: #cec99e;
+}
+
+.paleo {
+  background: #ffd43b;
+}
+
+.low-fodmap {
+  background: #ffa9a9;
+}
+
+.kid-friendly {
+  background: #f39f52;
 }
 
 /*************************/
@@ -608,6 +619,14 @@ strong {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 1.6rem;
+  border: 1px solid #fdf2e9;
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
 }
 
 .testimonial-name {
@@ -676,6 +695,16 @@ strong {
   transform: rotate(45deg);
 }
 
+.list-icon {
+  width: 2rem;
+  height: 2rem;
+  color: #e67e22;
+}
+
+.list-icon-close {
+  color: #fff;
+}
+
 .plan-header {
   text-align: center;
   margin-bottom: 4.8rem;
@@ -732,7 +761,7 @@ strong {
 
 .feature-title {
   font-size: 2.4rem;
-  color: #333;
+  color: #45260a;
   font-weight: 700;
   margin-bottom: 1.6rem;
 }
